tests/parse/err_class_decls.lx
//CASE missing_method_name
class Foo {
    () {}
}

//CASE missing_method_cbrace
class Foo {
    bar() {
}

//CASE missing_class_name
class {
    foo(lol) {}
}

//CASE this_outside_class
print this;

fun foo() {
    print this;
}

//CASE return_val_from_init
fun init() {
    return false; // no error
}

class Foo {
    init() {
        return false; // error
    }
}
